# SortingAlgorithmsVisualization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.c  app.h  compare.c  compare.h  inputs.c  inputs.h  libraries.h  logger.c  logger.h  main.c  settings.h  sorting.c  sorting.h  stats.c  stats.h  thread.c  thread.h  utils.c  utils.h  visual.c  visual.h
